@@ -38,7 +38,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.UUID;
 import org.apache.cxf.endpoint.Server;
-import org.apache.cxf.helpers.IOUtils;
 import org.apache.cxf.jaxrs.JAXRSServerFactoryBean;
 import org.apache.cxf.jaxrs.client.WebClient;
 import org.apache.cxf.jaxrs.ext.MessageContext;
@@ -223,7 +222,7 @@ public class AnyObjectServiceTest {
         InputStream in = (InputStream) response.getEntity();
 
         PagedResult<AnyObjectTO> list = new SyncopeJsonMapper().
-                readValue(IOUtils.toString(in), new TypeReference<>() {
+                readValue(in.readAllBytes(), new TypeReference<>() {
                 });
         checkList(list);
     }
